// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bitkub client Ask a bid with default order type 1`] = `
{
  "amt": 1,
  "ci": "input_client_id",
  "cre": 37.5,
  "fee": 37.5,
  "hash": "fwQ6dnQWQPs4cbatFGc9LPnpqyu",
  "id": "1",
  "rat": 15000,
  "rec": 15000,
  "ts": 1533834844,
  "typ": "limit",
}
`;

exports[`Bitkub client Build a request payload including signature key 1`] = `
{
  "X-BTK-APIKEY": "test-key",
  "X-BTK-SIGN": "735066e5b9cf225344cb32b5e8e9441735f6a1ecffd75907853886f8ea37f65a",
  "X-BTK-TIMESTAMP": 1699376552354,
  "accept": "application/json",
  "content-type": "application/json",
}
`;

exports[`Bitkub client Can change the api key 1`] = `undefined`;

exports[`Bitkub client Can generate request header for GET method 1`] = `
{
  "X-BTK-APIKEY": "test-key",
  "X-BTK-SIGN": "dc2f15cf69d9ec17f103c5ce1936a7acf51b79c0e412baf1eb448206953fd7ff",
  "X-BTK-TIMESTAMP": 1699376552354,
  "accept": "application/json",
  "content-type": "application/json",
}
`;

exports[`Bitkub client Close position in sandbox environment with mocked APIs 1`] = `
{
  "amt": 100,
  "cre": 0,
  "fee": 0,
  "hash": "test",
  "id": "0",
  "rat": 0,
  "rec": 0,
  "ts": 1642094235,
  "typ": "market",
}
`;

exports[`Bitkub client Close position through mocked server 1`] = `
{
  "amt": 1,
  "ci": "input_client_id",
  "cre": 37.5,
  "fee": 37.5,
  "hash": "fwQ6dnQWQPs4cbatFGc9LPnpqyu",
  "id": "1",
  "rat": 15000,
  "rec": 15000,
  "ts": 1533834844,
  "typ": "limit",
}
`;

exports[`Bitkub client Get balances 1`] = `
{
  "error": 0,
  "result": {
    "1INCH": {
      "available": 0,
      "reserved": 0,
    },
    "AAVE": {
      "available": 0,
      "reserved": 0,
    },
    "ABT": {
      "available": 0,
      "reserved": 0,
    },
    "ADA": {
      "available": 0,
      "reserved": 0,
    },
    "ALGO": {
      "available": 0,
      "reserved": 0,
    },
    "ALPHA": {
      "available": 0,
      "reserved": 0,
    },
    "APE": {
      "available": 0,
      "reserved": 0,
    },
    "ATOM": {
      "available": 0,
      "reserved": 0,
    },
    "AVAX": {
      "available": 0,
      "reserved": 0,
    },
    "AXL": {
      "available": 0,
      "reserved": 0,
    },
    "AXS": {
      "available": 0,
      "reserved": 0,
    },
    "BAL": {
      "available": 0,
      "reserved": 0,
    },
    "BAND": {
      "available": 0,
      "reserved": 0,
    },
    "BAT": {
      "available": 0,
      "reserved": 0,
    },
    "BCH": {
      "available": 0,
      "reserved": 0,
    },
    "BNB": {
      "available": 0.08779727,
      "reserved": 0,
    },
    "BOBA": {
      "available": 0,
      "reserved": 0,
    },
    "BTC": {
      "available": 0.00112343,
      "reserved": 0,
    },
    "BUSD": {
      "available": 0,
      "reserved": 0,
    },
    "CELO": {
      "available": 0,
      "reserved": 0,
    },
    "CHZ": {
      "available": 0,
      "reserved": 0,
    },
    "COMP": {
      "available": 0,
      "reserved": 0,
    },
    "CRV": {
      "available": 0,
      "reserved": 0,
    },
    "CTXC": {
      "available": 0,
      "reserved": 0,
    },
    "CVC": {
      "available": 0,
      "reserved": 0,
    },
    "DAI": {
      "available": 0,
      "reserved": 0,
    },
    "DOGE": {
      "available": 379.58065375,
      "reserved": 0,
    },
    "DON": {
      "available": 0,
      "reserved": 0,
    },
    "DOT": {
      "available": 0,
      "reserved": 0,
    },
    "DYDX": {
      "available": 0,
      "reserved": 0,
    },
    "ENJ": {
      "available": 67.03629032,
      "reserved": 0,
    },
    "ENS": {
      "available": 0,
      "reserved": 0,
    },
    "ETH": {
      "available": 0.01736505,
      "reserved": 0,
    },
    "EXFI": {
      "available": 0,
      "reserved": 0,
    },
    "FLR": {
      "available": 0,
      "reserved": 0,
    },
    "FTM": {
      "available": 0,
      "reserved": 0,
    },
    "FTT": {
      "available": 0,
      "reserved": 0,
    },
    "GAL": {
      "available": 0,
      "reserved": 0,
    },
    "GALA": {
      "available": 0,
      "reserved": 0,
    },
    "GF": {
      "available": 0,
      "reserved": 0,
    },
    "GLM": {
      "available": 0,
      "reserved": 0,
    },
    "GRT": {
      "available": 0,
      "reserved": 0,
    },
    "GT": {
      "available": 0,
      "reserved": 0,
    },
    "HBAR": {
      "available": 0,
      "reserved": 0,
    },
    "ILV": {
      "available": 0,
      "reserved": 0,
    },
    "IMX": {
      "available": 0,
      "reserved": 0,
    },
    "IOST": {
      "available": 0,
      "reserved": 0,
    },
    "JFIN": {
      "available": 0,
      "reserved": 0,
    },
    "KNC": {
      "available": 0,
      "reserved": 0,
    },
    "KSM": {
      "available": 0,
      "reserved": 0,
    },
    "KUB": {
      "available": 0,
      "reserved": 0,
    },
    "LDO": {
      "available": 0,
      "reserved": 0,
    },
    "LINK": {
      "available": 4.15521119,
      "reserved": 0,
    },
    "LRC": {
      "available": 0,
      "reserved": 0,
    },
    "LUNA": {
      "available": 0,
      "reserved": 0,
    },
    "LUNA2": {
      "available": 0,
      "reserved": 0,
    },
    "LYXE": {
      "available": 0,
      "reserved": 0,
    },
    "MANA": {
      "available": 0,
      "reserved": 0,
    },
    "MATIC": {
      "available": 0,
      "reserved": 0,
    },
    "MKR": {
      "available": 0,
      "reserved": 0,
    },
    "NEAR": {
      "available": 0,
      "reserved": 0,
    },
    "OCEAN": {
      "available": 0,
      "reserved": 0,
    },
    "OMG": {
      "available": 0,
      "reserved": 0,
    },
    "OP": {
      "available": 0,
      "reserved": 0,
    },
    "POW": {
      "available": 0,
      "reserved": 0,
    },
    "SAND": {
      "available": 0,
      "reserved": 0,
    },
    "SCRT": {
      "available": 0,
      "reserved": 0,
    },
    "SGB": {
      "available": 0,
      "reserved": 0,
    },
    "SIX": {
      "available": 0,
      "reserved": 0,
    },
    "SNT": {
      "available": 0,
      "reserved": 0,
    },
    "SNX": {
      "available": 0,
      "reserved": 0,
    },
    "SOL": {
      "available": 0,
      "reserved": 0,
    },
    "SOLO": {
      "available": 0,
      "reserved": 0,
    },
    "STG": {
      "available": 0,
      "reserved": 0,
    },
    "SUSHI": {
      "available": 0,
      "reserved": 0,
    },
    "THB": {
      "available": 14780.5,
      "reserved": 0,
    },
    "TRX": {
      "available": 0,
      "reserved": 0,
    },
    "UNI": {
      "available": 0,
      "reserved": 0,
    },
    "USDC": {
      "available": 30.24,
      "reserved": 0,
    },
    "USDT": {
      "available": 0,
      "reserved": 0,
    },
    "WAN": {
      "available": 0,
      "reserved": 0,
    },
    "XLM": {
      "available": 0,
      "reserved": 0,
    },
    "XRP": {
      "available": 0,
      "reserved": 0,
    },
    "XTZ": {
      "available": 0,
      "reserved": 0,
    },
    "YFI": {
      "available": 0,
      "reserved": 0,
    },
    "ZIL": {
      "available": 0,
      "reserved": 0,
    },
    "ZRX": {
      "available": 0,
      "reserved": 0,
    },
  },
}
`;

exports[`Bitkub client Get symbols 1`] = `
{
  "error": 0,
  "result": [
    {
      "id": 1,
      "info": "Thai Baht to Bitcoin",
      "symbol": "THB_BTC",
    },
    {
      "id": 2,
      "info": "Thai Baht to Ethereum",
      "symbol": "THB_ETH",
    },
    {
      "id": 4,
      "info": "Thai Baht to Cardano",
      "symbol": "THB_ADA",
    },
    {
      "id": 6,
      "info": "Thai Baht to Bitcoin Cash",
      "symbol": "THB_BCH",
    },
    {
      "id": 8,
      "info": "Thai Baht to Tether",
      "symbol": "THB_USDT",
    },
    {
      "id": 10,
      "info": "Thai Baht to XRP",
      "symbol": "THB_XRP",
    },
    {
      "id": 12,
      "info": "Thai Baht to Zilliqa",
      "symbol": "THB_ZIL",
    },
    {
      "id": 13,
      "info": "Thai Baht to Status",
      "symbol": "THB_SNT",
    },
    {
      "id": 14,
      "info": "Thai Baht to Civic",
      "symbol": "THB_CVC",
    },
    {
      "id": 15,
      "info": "Thai Baht to Chainlink",
      "symbol": "THB_LINK",
    },
    {
      "id": 17,
      "info": "Thai Baht to IOST",
      "symbol": "THB_IOST",
    },
    {
      "id": 18,
      "info": "Thai Baht to 0x",
      "symbol": "THB_ZRX",
    },
    {
      "id": 19,
      "info": "Thai Baht to Kyber Network",
      "symbol": "THB_KNC",
    },
    {
      "id": 22,
      "info": "Thai Baht to Arcblock",
      "symbol": "THB_ABT",
    },
    {
      "id": 24,
      "info": "Thai Baht to Decentraland",
      "symbol": "THB_MANA",
    },
    {
      "id": 28,
      "info": "Thai Baht to Cortex",
      "symbol": "THB_CTXC",
    },
    {
      "id": 29,
      "info": "Thai Baht to Stellar",
      "symbol": "THB_XLM",
    },
    {
      "id": 30,
      "info": "Thai Baht to SIX",
      "symbol": "THB_SIX",
    },
    {
      "id": 31,
      "info": "Thai Baht to JFIN Coin",
      "symbol": "THB_JFIN",
    },
    {
      "id": 33,
      "info": "Thai Baht to BNB",
      "symbol": "THB_BNB",
    },
    {
      "id": 34,
      "info": "Thai Baht to Powerledger",
      "symbol": "THB_POW",
    },
    {
      "id": 35,
      "info": "Thai Baht to Dogecoin",
      "symbol": "THB_DOGE",
    },
    {
      "id": 37,
      "info": "Thai Baht to TRON",
      "symbol": "THB_TRX",
    },
    {
      "id": 43,
      "info": "Thai Baht to Tezos",
      "symbol": "THB_XTZ",
    },
    {
      "id": 44,
      "info": "Thai Baht to Algorand",
      "symbol": "THB_ALGO",
    },
    {
      "id": 46,
      "info": "Thai Baht to USD Coin",
      "symbol": "THB_USDC",
    },
    {
      "id": 49,
      "info": "Thai Baht to Basic Attention Token",
      "symbol": "THB_BAT",
    },
    {
      "id": 56,
      "info": "Thai Baht to Enjin Coin",
      "symbol": "THB_ENJ",
    },
    {
      "id": 65,
      "info": "Thai Baht to Band",
      "symbol": "THB_BAND",
    },
    {
      "id": 66,
      "info": "Thai Baht to Compound",
      "symbol": "THB_COMP",
    },
    {
      "id": 67,
      "info": "Thai Baht to Kusama",
      "symbol": "THB_KSM",
    },
    {
      "id": 68,
      "info": "Thai Baht to Polkadot",
      "symbol": "THB_DOT",
    },
    {
      "id": 69,
      "info": "Thai Baht to NEAR Protocol",
      "symbol": "THB_NEAR",
    },
    {
      "id": 70,
      "info": "Thai Baht to Secret",
      "symbol": "THB_SCRT",
    },
    {
      "id": 71,
      "info": "Thai Baht to Golem",
      "symbol": "THB_GLM",
    },
    {
      "id": 72,
      "info": "Thai Baht to Donnie Finance",
      "symbol": "THB_DON",
    },
    {
      "id": 73,
      "info": "Thai Baht to yearn.finance",
      "symbol": "THB_YFI",
    },
    {
      "id": 74,
      "info": "Thai Baht to Uniswap",
      "symbol": "THB_UNI",
    },
    {
      "id": 75,
      "info": "Thai Baht to Aave",
      "symbol": "THB_AAVE",
    },
    {
      "id": 76,
      "info": "Thai Baht to Stella",
      "symbol": "THB_ALPHA",
    },
    {
      "id": 79,
      "info": "Thai Baht to Synthetix",
      "symbol": "THB_SNX",
    },
    {
      "id": 81,
      "info": "Thai Baht to UMA",
      "symbol": "THB_UMA",
    },
    {
      "id": 82,
      "info": "Thai Baht to The Sandbox",
      "symbol": "THB_SAND",
    },
    {
      "id": 83,
      "info": "Thai Baht to Balancer",
      "symbol": "THB_BAL",
    },
    {
      "id": 85,
      "info": "Thai Baht to Curve DAO Token",
      "symbol": "THB_CRV",
    },
    {
      "id": 87,
      "info": "Thai Baht to API3",
      "symbol": "THB_API3",
    },
    {
      "id": 88,
      "info": "Thai Baht to The Graph",
      "symbol": "THB_GRT",
    },
    {
      "id": 92,
      "info": "Thai Baht to Bitkub Coin",
      "symbol": "THB_KUB",
    },
    {
      "id": 93,
      "info": "Thai Baht to Axie Infinity",
      "symbol": "THB_AXS",
    },
    {
      "id": 95,
      "info": "Thai Baht to Sushi",
      "symbol": "THB_SUSHI",
    },
    {
      "id": 98,
      "info": "Thai Baht to Immutable X",
      "symbol": "THB_IMX",
    },
    {
      "id": 99,
      "info": "Thai Baht to dYdX",
      "symbol": "THB_DYDX",
    },
    {
      "id": 101,
      "info": "Thai Baht to Ethereum Name Service",
      "symbol": "THB_ENS",
    },
    {
      "id": 102,
      "info": "Thai Baht to Boba Token",
      "symbol": "THB_BOBA",
    },
    {
      "id": 103,
      "info": "Thai Baht to Illuvium",
      "symbol": "THB_ILV",
    },
    {
      "id": 104,
      "info": "Thai Baht to Gala",
      "symbol": "THB_GALA",
    },
    {
      "id": 105,
      "info": "Thai Baht to GateToken",
      "symbol": "THB_GT",
    },
    {
      "id": 106,
      "info": "Thai Baht to Songbird",
      "symbol": "THB_SGB",
    },
    {
      "id": 112,
      "info": "Thai Baht to Chiliz",
      "symbol": "THB_CHZ",
    },
    {
      "id": 115,
      "info": "Thai Baht to Coin98",
      "symbol": "THB_C98",
    },
    {
      "id": 117,
      "info": "Thai Baht to Experimental Finance",
      "symbol": "THB_EXFI",
    },
    {
      "id": 118,
      "info": "Thai Baht to Solana",
      "symbol": "THB_SOL",
    },
    {
      "id": 119,
      "info": "Thai Baht to Avalanche",
      "symbol": "THB_AVAX",
    },
    {
      "id": 122,
      "info": "Thai Baht to Terra Classic (LUNC)",
      "symbol": "THB_LUNA",
    },
    {
      "id": 123,
      "info": "Thai Baht to ApeCoin",
      "symbol": "THB_APE",
    },
    {
      "id": 124,
      "info": "Thai Baht to Hedera",
      "symbol": "THB_HBAR",
    },
    {
      "id": 126,
      "info": "Thai Baht to Loopring",
      "symbol": "THB_LRC",
    },
    {
      "id": 129,
      "info": "Thai Baht to Celo",
      "symbol": "THB_CELO",
    },
    {
      "id": 132,
      "info": "Thai Baht to Sologenic",
      "symbol": "THB_SOLO",
    },
    {
      "id": 133,
      "info": "Thai Baht to Terra",
      "symbol": "THB_LUNA2",
    },
    {
      "id": 134,
      "info": "Thai Baht to Optimism",
      "symbol": "THB_OP",
    },
    {
      "id": 135,
      "info": "Thai Baht to Moonriver",
      "symbol": "THB_MOVR",
    },
    {
      "id": 136,
      "info": "Thai Baht to Glimmer",
      "symbol": "THB_GLMR",
    },
    {
      "id": 139,
      "info": "Thai Baht to 1inch Network",
      "symbol": "THB_1INCH",
    },
    {
      "id": 140,
      "info": "Thai Baht to Cosmos",
      "symbol": "THB_ATOM",
    },
    {
      "id": 141,
      "info": "Thai Baht to LDO",
      "symbol": "THB_LDO",
    },
    {
      "id": 142,
      "info": "Thai Baht to STG",
      "symbol": "THB_STG",
    },
    {
      "id": 143,
      "info": "Thai Baht to AXL",
      "symbol": "THB_AXL",
    },
    {
      "id": 144,
      "info": "Thai Baht to FLOW",
      "symbol": "THB_FLOW",
    },
    {
      "id": 145,
      "info": "Thai Baht to REALX",
      "symbol": "THB_REALX",
    },
    {
      "id": 147,
      "info": "Thai Baht to Frax Share",
      "symbol": "THB_FXS",
    },
    {
      "id": 148,
      "info": "Thai Baht to Hashflow",
      "symbol": "THB_HFT",
    },
    {
      "id": 149,
      "info": "Thai Baht to Arbitrum",
      "symbol": "THB_ARB",
    },
    {
      "id": 150,
      "info": "Thai Baht to Liquity",
      "symbol": "THB_LQTY",
    },
    {
      "id": 152,
      "info": "Thai Baht to Perpetual Protocol",
      "symbol": "THB_PERP",
    },
    {
      "id": 153,
      "info": "Thai Baht to SPACE ID",
      "symbol": "THB_ID",
    },
    {
      "id": 155,
      "info": "Thai Baht to JOE",
      "symbol": "THB_JOE",
    },
    {
      "id": 156,
      "info": "Thai Baht to Blur",
      "symbol": "THB_BLUR",
    },
    {
      "id": 157,
      "info": "Thai Baht to GNO",
      "symbol": "THB_GNO",
    },
    {
      "id": 158,
      "info": "Thai Baht to WOO",
      "symbol": "THB_WOO",
    },
    {
      "id": 159,
      "info": "Thai Baht to Ankr",
      "symbol": "THB_ANKR",
    },
    {
      "id": 160,
      "info": "Thai Baht to Render Token",
      "symbol": "THB_RNDR",
    },
    {
      "id": 161,
      "info": "Thai Baht to Injective",
      "symbol": "THB_INJ",
    },
    {
      "id": 162,
      "info": "Thai Baht to Worldcoin",
      "symbol": "THB_WLD",
    },
    {
      "id": 164,
      "info": "Thai Baht to Gmx",
      "symbol": "THB_GMX",
    },
    {
      "id": 165,
      "info": "Thai Baht to PLEARN",
      "symbol": "THB_PLN",
    },
    {
      "id": 166,
      "info": "Thai Baht to CyberConnect",
      "symbol": "THB_CYBER",
    },
    {
      "id": 167,
      "info": "Thai Baht to Flux",
      "symbol": "THB_FLUX",
    },
    {
      "id": 168,
      "info": "Thai Baht to Quant",
      "symbol": "THB_QNT",
    },
    {
      "id": 170,
      "info": "Thai Baht to Celestia",
      "symbol": "THB_TIA",
    },
    {
      "id": 172,
      "info": "Thai Baht to Lukso",
      "symbol": "THB_LYX",
    },
    {
      "id": 173,
      "info": "Thai Baht to Zeta",
      "symbol": "THB_ZETA",
    },
    {
      "id": 174,
      "info": "Thai Baht to Ondo Finance",
      "symbol": "THB_ONDO",
    },
    {
      "id": 175,
      "info": "Thai Baht to Altlayer",
      "symbol": "THB_ALT",
    },
    {
      "id": 176,
      "info": "Thai Baht to Velodrome Finance",
      "symbol": "THB_VELO",
    },
    {
      "id": 177,
      "info": "Thai Baht to Radiant Capital",
      "symbol": "THB_RDNT",
    },
    {
      "id": 178,
      "info": "Thai Baht to Safepal",
      "symbol": "THB_SFP",
    },
    {
      "id": 181,
      "info": "Thai Baht to Marblex",
      "symbol": "THB_MBX",
    },
    {
      "id": 182,
      "info": "Thai Baht to Osmosis",
      "symbol": "THB_OSMO",
    },
    {
      "id": 183,
      "info": "Thai Baht to Aevo",
      "symbol": "THB_AEVO",
    },
    {
      "id": 184,
      "info": "Thai Baht to SKALE",
      "symbol": "THB_SKL",
    },
    {
      "id": 185,
      "info": "Thai Baht to Trust Wallet Token",
      "symbol": "THB_TWT",
    },
    {
      "id": 186,
      "info": "Thai Baht to Heroes of Mavia",
      "symbol": "THB_MAVIA",
    },
    {
      "id": 187,
      "info": "Thai Baht to Ethena",
      "symbol": "THB_ENA",
    },
    {
      "id": 188,
      "info": "Thai Baht to Zentry",
      "symbol": "THB_ZENT",
    },
    {
      "id": 189,
      "info": "Thai Baht to IQ",
      "symbol": "THB_IQ",
    },
    {
      "id": 190,
      "info": "Thai Baht to Ether.Fi",
      "symbol": "THB_ETHFI",
    },
    {
      "id": 191,
      "info": "Thai Baht to Aerodrome",
      "symbol": "THB_AERO",
    },
    {
      "id": 192,
      "info": "Thai Baht to Livepeer",
      "symbol": "THB_LPT",
    },
    {
      "id": 194,
      "info": "Thai Baht to OriginTrail",
      "symbol": "THB_TRAC",
    },
    {
      "id": 195,
      "info": "Thai Baht to BENQI",
      "symbol": "THB_QI",
    },
    {
      "id": 196,
      "info": "Thai Baht to Arkham",
      "symbol": "THB_ARKM",
    },
    {
      "id": 197,
      "info": "Thai Baht to Safe",
      "symbol": "THB_SAFE",
    },
    {
      "id": 198,
      "info": "Thai Baht to Renzo",
      "symbol": "THB_REZ",
    },
    {
      "id": 200,
      "info": "Thai Baht to Kava",
      "symbol": "THB_KAVA",
    },
    {
      "id": 201,
      "info": "Thai Baht to ssv.network",
      "symbol": "THB_SSV",
    },
    {
      "id": 202,
      "info": "Thai Baht to Tellor",
      "symbol": "THB_TRB",
    },
    {
      "id": 203,
      "info": "Thai Baht to Ronin",
      "symbol": "THB_RON",
    },
    {
      "id": 204,
      "info": "Thai Baht to Reserve Rights",
      "symbol": "THB_RSR",
    },
    {
      "id": 205,
      "info": "Thai Baht to zkSync",
      "symbol": "THB_ZK",
    },
    {
      "id": 206,
      "info": "Thai Baht to Spectral",
      "symbol": "THB_SPEC",
    },
    {
      "id": 207,
      "info": "Thai Baht to Celer Network",
      "symbol": "THB_CELR",
    },
    {
      "id": 208,
      "info": "Thai Baht to LayerZero",
      "symbol": "THB_ZRO",
    },
    {
      "id": 209,
      "info": "Thai Baht to Aethir",
      "symbol": "THB_ATH",
    },
    {
      "id": 210,
      "info": "Thai Baht to Mantle",
      "symbol": "THB_MNT",
    },
    {
      "id": 211,
      "info": "Thai Baht to IoTeX",
      "symbol": "THB_IOTX",
    },
    {
      "id": 213,
      "info": "Thai Baht to Blast",
      "symbol": "THB_BLAST",
    },
    {
      "id": 215,
      "info": "Thai Baht to Core",
      "symbol": "THB_CORE",
    },
    {
      "id": 216,
      "info": "Thai Baht to Raydium",
      "symbol": "THB_RAY",
    },
    {
      "id": 218,
      "info": "Thai Baht to Swell Network",
      "symbol": "THB_SWELL",
    },
    {
      "id": 219,
      "info": "Thai Baht to Toncoin",
      "symbol": "THB_TON",
    },
    {
      "id": 221,
      "info": "Thai Baht to Internet Computer",
      "symbol": "THB_ICP",
    },
    {
      "id": 222,
      "info": "Thai Baht to Layer3",
      "symbol": "THB_L3",
    },
    {
      "id": 223,
      "info": "Thai Baht to Polygon",
      "symbol": "THB_POL",
    },
    {
      "id": 224,
      "info": "Thai Baht to Gravity",
      "symbol": "THB_G",
    },
    {
      "id": 225,
      "info": "Thai Baht to Pyth Network",
      "symbol": "THB_PYTH",
    },
    {
      "id": 226,
      "info": "Thai Baht to EigenLayer",
      "symbol": "THB_EIGEN",
    },
    {
      "id": 227,
      "info": "Thai Baht to Aptos",
      "symbol": "THB_APT",
    },
    {
      "id": 228,
      "info": "Thai Baht to LeisureMeta",
      "symbol": "THB_LM",
    },
    {
      "id": 229,
      "info": "Thai Baht to Orderly Network",
      "symbol": "THB_ORDER",
    },
    {
      "id": 230,
      "info": "Thai Baht to Puffer",
      "symbol": "THB_PUFFR",
    },
    {
      "id": 231,
      "info": "Thai Baht to Wormhole",
      "symbol": "THB_W",
    },
    {
      "id": 232,
      "info": "Thai Baht to Parcl",
      "symbol": "THB_PRCL",
    },
    {
      "id": 233,
      "info": "Thai Baht to Tensor",
      "symbol": "THB_TNSR",
    },
    {
      "id": 234,
      "info": "Thai Baht to deBridge",
      "symbol": "THB_DBR",
    },
    {
      "id": 235,
      "info": "Thai Baht to SUI",
      "symbol": "THB_SUI",
    },
    {
      "id": 236,
      "info": "Thai Baht to Kaia",
      "symbol": "THB_KAIA",
    },
    {
      "id": 237,
      "info": "Thai Baht to Carv",
      "symbol": "THB_CARV",
    },
    {
      "id": 238,
      "info": "Thai Baht to Artificial Superintelligence Alliance",
      "symbol": "THB_FET",
    },
    {
      "id": 239,
      "info": "Thai Baht to Helium",
      "symbol": "THB_HNT",
    },
    {
      "id": 240,
      "info": "Thai Baht to io.net",
      "symbol": "THB_IO",
    },
    {
      "id": 241,
      "info": "Thai Baht to Jito",
      "symbol": "THB_JTO",
    },
    {
      "id": 242,
      "info": "Thai Baht to Zircuit",
      "symbol": "THB_ZRC",
    },
    {
      "id": 243,
      "info": "Thai Baht to Catizen",
      "symbol": "THB_CATI",
    },
    {
      "id": 244,
      "info": "Thai Baht to Magic Eden",
      "symbol": "THB_ME",
    },
    {
      "id": 245,
      "info": "Thai Baht to Orca",
      "symbol": "THB_ORCA",
    },
    {
      "id": 246,
      "info": "Thai Baht to Viction",
      "symbol": "THB_VIC",
    },
    {
      "id": 249,
      "info": "Thai Baht to Sonic",
      "symbol": "THB_S",
    },
    {
      "id": 251,
      "info": "Thai Baht to Scroll",
      "symbol": "THB_SCR",
    },
    {
      "id": 253,
      "info": "Thai Baht to Summer Point",
      "symbol": "THB_SUMX",
    },
    {
      "id": 254,
      "info": "Thai Baht to Peaq Network",
      "symbol": "THB_PEAQ",
    },
    {
      "id": 255,
      "info": "Thai Baht to Everclear",
      "symbol": "THB_CLEAR",
    },
    {
      "id": 256,
      "info": "Thai Baht to AUSD",
      "symbol": "THB_AUSD",
    },
    {
      "id": 257,
      "info": "Thai Baht to Pendle",
      "symbol": "THB_PENDLE",
    },
    {
      "id": 258,
      "info": "Thai Baht to Virtuals Protocol",
      "symbol": "THB_VIRTUAL",
    },
    {
      "id": 259,
      "info": "Thai Baht to Sei",
      "symbol": "THB_SEI",
    },
    {
      "id": 260,
      "info": "Thai Baht to KernelDAO",
      "symbol": "THB_KERNEL",
    },
    {
      "id": 262,
      "info": "Thai Baht to Kaito",
      "symbol": "THB_KAITO",
    },
    {
      "id": 263,
      "info": "Thai Baht to RedStone",
      "symbol": "THB_RED",
    },
    {
      "id": 264,
      "info": "Thai Baht to B3 (Base)",
      "symbol": "THB_B3",
    },
    {
      "id": 265,
      "info": "Thai Baht to XDC",
      "symbol": "THB_XDC",
    },
    {
      "id": 266,
      "info": "Thai Baht to Plume",
      "symbol": "THB_PLUME",
    },
    {
      "id": 267,
      "info": "Thai Baht to Grass",
      "symbol": "THB_GRASS",
    },
    {
      "id": 268,
      "info": "Thai Baht to Bubblemaps",
      "symbol": "THB_BMT",
    },
    {
      "id": 270,
      "info": "Thai Baht to Cetus Protocol",
      "symbol": "THB_CETUS",
    },
    {
      "id": 271,
      "info": "Thai Baht to NEXPACE",
      "symbol": "THB_NXPC",
    },
    {
      "id": 272,
      "info": "Thai Baht to Walletconnect Token",
      "symbol": "THB_WCT",
    },
    {
      "id": 273,
      "info": "Thai Baht to Kamino Finance",
      "symbol": "THB_KMNO",
    },
    {
      "id": 274,
      "info": "Thai Baht to Solayer",
      "symbol": "THB_LAYER",
    },
    {
      "id": 277,
      "info": "Thai Baht to Biconomy",
      "symbol": "THB_BICO",
    },
    {
      "id": 278,
      "info": "Thai Baht to Elysia",
      "symbol": "THB_EL",
    },
    {
      "id": 279,
      "info": "Thai Baht to Space and Time",
      "symbol": "THB_SXT",
    },
    {
      "id": 280,
      "info": "Thai Baht to Wayfinder",
      "symbol": "THB_PROMPT",
    },
    {
      "id": 281,
      "info": "Thai Baht to StakeStone",
      "symbol": "THB_STO",
    },
    {
      "id": 282,
      "info": "Thai Baht to MyShell",
      "symbol": "THB_SHELL",
    },
    {
      "id": 283,
      "info": "Thai Baht to Across Protocol",
      "symbol": "THB_ACX",
    },
    {
      "id": 284,
      "info": "Thai Baht to USDS",
      "symbol": "THB_USDS",
    },
    {
      "id": 285,
      "info": "Thai Baht to Lagrange",
      "symbol": "THB_LA",
    },
    {
      "id": 286,
      "info": "Thai Baht to Defi App",
      "symbol": "THB_HOME",
    },
    {
      "id": 287,
      "info": "Thai Baht to Resolv",
      "symbol": "THB_RESOLV",
    },
    {
      "id": 288,
      "info": "Thai Baht to Huma Finance",
      "symbol": "THB_HUMA",
    },
    {
      "id": 289,
      "info": "Thai Baht to Haedal",
      "symbol": "THB_HAEDAL",
    },
    {
      "id": 290,
      "info": "Thai Baht to DeLorean",
      "symbol": "THB_DMC",
    },
    {
      "id": 291,
      "info": "Thai Baht to Cookie DAO",
      "symbol": "THB_COOKIE",
    },
    {
      "id": 292,
      "info": "Thai Baht to Maple Finance",
      "symbol": "THB_SYRUP",
    },
    {
      "id": 294,
      "info": "Thai Baht to Sky",
      "symbol": "THB_SKY",
    },
    {
      "id": 295,
      "info": "Thai Baht to Spark",
      "symbol": "THB_SPK",
    },
    {
      "id": 296,
      "info": "Thai Baht to Morpho",
      "symbol": "THB_MORPHO",
    },
    {
      "id": 297,
      "info": "Thai Baht to Newton Protocol",
      "symbol": "THB_NEWT",
    },
    {
      "id": 298,
      "info": "Thai Baht to Sahara AI",
      "symbol": "THB_SAHARA",
    },
    {
      "id": 300,
      "info": "Thai Baht to Manta Network",
      "symbol": "THB_MANTA",
    },
    {
      "id": 301,
      "info": "Thai Baht to Babylon",
      "symbol": "THB_BABY",
    },
    {
      "id": 302,
      "info": "Thai Baht to Sophon",
      "symbol": "THB_SOPH",
    },
    {
      "id": 303,
      "info": "Thai Baht to Eclipse",
      "symbol": "THB_ES",
    },
    {
      "id": 304,
      "info": "Thai Baht to Caldera",
      "symbol": "THB_ERA",
    },
    {
      "id": 305,
      "info": "Thai Baht to Chainbase",
      "symbol": "THB_C",
    },
    {
      "id": 306,
      "info": "Thai Baht to Scallop",
      "symbol": "THB_SCA",
    },
    {
      "id": 307,
      "info": "Thai Baht to Treehouse",
      "symbol": "THB_TREE",
    },
    {
      "id": 308,
      "info": "Thai Baht to Hyperlane",
      "symbol": "THB_HYPER",
    },
    {
      "id": 309,
      "info": "Thai Baht to Taiko",
      "symbol": "THB_TAIKO",
    },
    {
      "id": 310,
      "info": "Thai Baht to Succinct",
      "symbol": "THB_PROVE",
    },
    {
      "id": 311,
      "info": "Thai Baht to Towns",
      "symbol": "THB_TOWNS",
    },
    {
      "id": 312,
      "info": "Thai Baht to Subsquid",
      "symbol": "THB_SQD",
    },
    {
      "id": 313,
      "info": "Thai Baht to Sonic SVM",
      "symbol": "THB_SONIC",
    },
    {
      "id": 314,
      "info": "Thai Baht to Aspecta",
      "symbol": "THB_ASP",
    },
    {
      "id": 315,
      "info": "Thai Baht to Epic Chain",
      "symbol": "THB_EPIC",
    },
    {
      "id": 316,
      "info": "Thai Baht to Sapien",
      "symbol": "THB_SAPIEN",
    },
    {
      "id": 317,
      "info": "Thai Baht to Linea",
      "symbol": "THB_LINEA",
    },
    {
      "id": 318,
      "info": "Thai Baht to Conflux",
      "symbol": "THB_CFX",
    },
    {
      "id": 320,
      "info": "Thai Baht to Plasma",
      "symbol": "THB_XPL",
    },
    {
      "id": 322,
      "info": "Thai Baht to Mitosis",
      "symbol": "THB_MITO",
    },
    {
      "id": 323,
      "info": "Thai Baht to OpenLedger",
      "symbol": "THB_OPEN",
    },
    {
      "id": 324,
      "info": "Thai Baht to Avantis",
      "symbol": "THB_AVNT",
    },
    {
      "id": 326,
      "info": "Thai Baht to Dolomite",
      "symbol": "THB_DOLO",
    },
    {
      "id": 327,
      "info": "Thai Baht to Somnia",
      "symbol": "THB_SOMI",
    },
    {
      "id": 328,
      "info": "Thai Baht to SOON",
      "symbol": "THB_SOON",
    },
    {
      "id": 329,
      "info": "Thai Baht to Boundless",
      "symbol": "THB_ZKC",
    },
    {
      "id": 330,
      "info": "Thai Baht to Lombard Finance",
      "symbol": "THB_BARD",
    },
    {
      "id": 331,
      "info": "Thai Baht to Tether Gold",
      "symbol": "THB_XAUT",
    },
    {
      "id": 332,
      "info": "Thai Baht to Nomina",
      "symbol": "THB_NOM",
    },
    {
      "id": 333,
      "info": "Thai Baht to BONK",
      "symbol": "THB_BONK",
    },
    {
      "id": 335,
      "info": "Thai Baht to Memecoin",
      "symbol": "THB_MEME",
    },
    {
      "id": 337,
      "info": "Thai Baht to Filecoin",
      "symbol": "THB_FIL",
    },
    {
      "id": 338,
      "info": "Thai Baht to DoubleZero",
      "symbol": "THB_2Z",
    },
    {
      "id": 339,
      "info": "Thai Baht to Mira",
      "symbol": "THB_MIRA",
    },
    {
      "id": 340,
      "info": "Thai Baht to Falcon Finance",
      "symbol": "THB_FF",
    },
    {
      "id": 341,
      "info": "Thai Baht to Hyperliquid",
      "symbol": "THB_HYPE",
    },
    {
      "id": 342,
      "info": "Thai Baht to OpenEden",
      "symbol": "THB_EDEN",
    },
    {
      "id": 343,
      "info": "Thai Baht to Hemi",
      "symbol": "THB_HEMI",
    },
    {
      "id": 344,
      "info": "Thai Baht to Recall",
      "symbol": "THB_RECALL",
    },
    {
      "id": 345,
      "info": "Thai Baht to Pudgy Penguins",
      "symbol": "THB_PENGU",
    },
    {
      "id": 346,
      "info": "Thai Baht to Anoma",
      "symbol": "THB_XAN",
    },
    {
      "id": 347,
      "info": "Thai Baht to Enso",
      "symbol": "THB_ENSO",
    },
    {
      "id": 349,
      "info": "Thai Baht to xMoney",
      "symbol": "THB_XMN",
    },
    {
      "id": 350,
      "info": "Thai Baht to Kite",
      "symbol": "THB_KITE",
    },
    {
      "id": 351,
      "info": "Thai Baht to Turtle",
      "symbol": "THB_TURTLE",
    },
    {
      "id": 352,
      "info": "Thai Baht to Bittensor",
      "symbol": "THB_TAO",
    },
    {
      "id": 353,
      "info": "Thai Baht to Monad",
      "symbol": "THB_MON",
    },
    {
      "id": 354,
      "info": "Thai Baht to Wemix",
      "symbol": "THB_WEMIX",
    },
    {
      "id": 355,
      "info": "Thai Baht to Metaplex",
      "symbol": "THB_MPLX",
    },
  ],
}
`;

exports[`Bitkub client Open position in sandbox environment with mocked APIs 1`] = `
{
  "amt": 100,
  "cre": 0,
  "fee": 0,
  "hash": "test",
  "id": "0",
  "rat": 0,
  "rec": 0,
  "ts": 1642094235,
  "typ": "market",
}
`;

exports[`Bitkub client Open position through mocked server 1`] = `
{
  "amt": 1000,
  "ci": "input_client_id",
  "cre": 2.5,
  "fee": 2.5,
  "hash": "fwQ6dnQWQPs4cbatF5Am2xCDP1J",
  "id": "1",
  "rat": 15000,
  "rec": 0.06666666,
  "ts": 1533834547,
  "typ": "limit",
}
`;

exports[`Bitkub client Place a bid with default order type 1`] = `
{
  "amt": 100,
  "cre": 0,
  "fee": 0,
  "hash": "test",
  "id": "0",
  "rat": 0,
  "rec": 0,
  "ts": 1642094235,
  "typ": "market",
}
`;
